@@ -4,13 +4,13 @@ from zope.component import queryAdapter
 from Products.Five.browser import BrowserView
 from eea.app.visualization.interfaces import IVisualizationConfig
 
-
 class View(BrowserView):
     """ Custom header
     """
     def __init__(self, context, request):
         super(View, self).__init__(context, request)
         self._accessor = None
+        self._available = None
 
     @property
     def accessor(self):
@@ -19,6 +19,19 @@ class View(BrowserView):
         if not self._accessor:
             self._accessor = queryAdapter(self.context, IVisualizationConfig)
         return self._accessor
+
+    @property
+    def available(self):
+        """ Is this view available
+        """
+        if self._available is None:
+            for view in self.accessor.views:
+                name = view.get('name', '')
+                if name.startswith('daviz.') or name.startswith('exhibit.'):
+                    self._available = True
+                    break
+        return self._available
+
 
     @property
     def sources(self):
